--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,7 +35,7 @@ rabbitmq.sms.routingkey=SMS.KEY
 
 #Mail Sender Configuration
 
-spring.mail.host=smtp.office365.com
+spring.mail.host=${SMTP_EMAIL_HOST}
 spring.mail.port=587
 spring.mail.username=${SMTP_EMAIL_USERNAME}
 spring.mail.password=${SMTP_EMAIL_PASSWORD}
